syntax = "proto3";

option csharp_namespace = "SophonChunksDownloader";

import "SophonChunk.proto";

message SophonChunkFile {
    string file = 1;
    repeated SophonChunk chunks = 2;
    bool is_folder = 3;
    int64 size = 4;
    string md5 = 5;
}